[gd_scene load_steps=3 format=3 uid="uid://cllrhwb6tq3gh"]

[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="1_64dwf"]
[ext_resource type="Script" uid="uid://c0ae3scnbkxdw" path="res://scenes/game_over_scene.gd" id="1_ny7m6"]

[node name="GameOverScene" type="Node2D"]
script = ExtResource("1_ny7m6")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "game_over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "restart"

[node name="ReturnToMainMenuButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "return_to_main"

[node name="ExitButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "leave_game"

[node name="FadeOverlay" parent="UI" instance=ExtResource("1_64dwf")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/ReturnToMainMenuButton" to="." method="_on_return_to_main_menu_button_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="on_complete_fade_out" from="UI/FadeOverlay" to="." method="_on_fade_overlay_on_complete_fade_out"]
